# note-flow

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts  开发笔记应用全流程教程.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/Common/: TagBadge.tsx
src/components/Editor/: EditorToolbar.tsx  NoteEditor.tsx  TagSelector.tsx  TitleInput.tsx  WordCount.tsx
src/components/Layout/: AppLayout.tsx  EmptyState.tsx  MainContent.tsx  TopBar.tsx
src/components/Sidebar/: FolderList.tsx  NoteList.tsx  Sidebar.tsx  SystemFolders.tsx  TagSection.tsx
src/db/: index.ts
src/stores/: appStore.ts
src/styles/: index.css
src/types/: index.ts
src/utils/: date.ts
