[package]
name = "note-flow"
version = "1.0.0"
description = "A elegant and powerful note-taking application"
authors = ["you"]
edition = "2021"

[lib]
name = "note_flow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-shell = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
